Fix a word wrapping issue

--- a/src/components/common/FloatingActionButton/style.scss
+++ b/src/components/common/FloatingActionButton/style.scss
@@ -3,7 +3,6 @@
   right: 2rem;
   bottom: 7.3rem;
   border: none;
-  z-index: 99;
   border-radius: 50%;
   padding: 1.5rem;
   background-color: var(--primary-color);
