--- a/src/components/common/TopicFeed/TopicCard/style.scss
+++ b/src/components/common/TopicFeed/TopicCard/style.scss
@@ -16,6 +16,7 @@
       margin: 0;
       font-weight: 500;
       font-size: 1.2rem;
+      white-space: nowrap;
     }
   }
   &-right {
